apps/auth/lldap/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: lldap
  namespace: authelia
  annotations:
    traefik.ingress.kubernetes.io/service.sticky.cookie: "true"
    traefik.ingress.kubernetes.io/service.sticky.cookie.name: "__Host-lldap-svc"
    traefik.ingress.kubernetes.io/service.sticky.cookie.secure: "true"
    traefik.ingress.kubernetes.io/service.sticky.cookie.httponly: "true"
    traefik.ingress.kubernetes.io/service.sticky.cookie.sameSite: "lax"
spec:
  ports:
    - port: 389
      targetPort: 3890
      name: ldap
    - port: 17170
      name: http
  selector:
    app: lldap
