apps/auth/lldap/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: lldap
  namespace: authelia
  annotations:
    cert-manager.io/cluster-issuer: letsencrypt-issuer
    traefik.ingress.kubernetes.io/router.middlewares: traefik-https-redirect@kubernetescrd
spec:
  ingressClassName: traefik
  tls:
    - hosts:
      - account.hubbe.club
      secretName: lldap-cert
  rules:
    - host: account.hubbe.club
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: lldap
                port:
                  number: 17170
